# cosmic-ext-applet-torrent-throttle

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  flatpak-sources.yml  release.yml
flatpak/: com.github.cosmic-qbit-remote.yaml  io.github.BlakeGardner.cosmic-ext-applet-qbit-remote.yaml  io.github.BlakeGardner.cosmic-ext-applet-torrent-throttle.json  io.github.BlakeGardner.cosmic-ext-applet-torrent-throttle.yaml  io.github.BlakeGardner.cosmic-ext-applet-torrent-yield.yaml
i18n/en/: cosmic_ext_applet_qbit_remote.ftl  cosmic_ext_applet_torrent_throttle.ftl  cosmic_ext_applet_torrent_yield.ftl  cosmic_qbit_remote.ftl
resources/: com.github.cosmic-qbit-remote.Applet.desktop  com.github.cosmic-qbit-remote.desktop  com.github.cosmic-qbit-remote.metainfo.xml  io.github.BlakeGardner.cosmic-ext-applet-qbit-remote.Applet.desktop  io.github.BlakeGardner.cosmic-ext-applet-qbit-remote.desktop  io.github.BlakeGardner.cosmic-ext-applet-qbit-remote.metainfo.xml  io.github.BlakeGardner.cosmic-ext-applet-torrent-throttle.Applet.desktop  io.github.BlakeGardner.cosmic-ext-applet-torrent-throttle.desktop  io.github.BlakeGardner.cosmic-ext-applet-torrent-throttle.metainfo.xml  io.github.BlakeGardner.cosmic-ext-applet-torrent-yield.Applet.desktop  io.github.BlakeGardner.cosmic-ext-applet-torrent-yield.desktop  io.github.BlakeGardner.cosmic-ext-applet-torrent-yield.metainfo.xml
scripts/: uninstall-local.sh
src/: app.rs  applet.rs  config.rs  engine.rs  i18n.rs  main.rs  monitor.rs  qbit.rs  sandbox.rs  tray.rs
