[package]
name = "cosmic-ext-applet-torrent-yield"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Applet for the COSMIC™ desktop that pauses or throttles torrent downloads when specific programs are running"
repository = "https://github.com/BlakeGardner/cosmic-ext-applet-torrent-yield"

[dependencies]
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
open = "5"
rust-embed = "8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
sysinfo = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "about",
    "applet",
    "tokio",
    "winit",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
